Changed Register buton to next button

--- a/DTF/src/pages/home/home.html
+++ b/DTF/src/pages/home/home.html
@@ -86,7 +86,7 @@
 </ion-list>
 <div align="center">
   <p>
-    <button ion-button color="primary" class="app_buttons" (click)="pushFn()">Register</button>
+    <button ion-button color="primary" class="app_buttons" (click)="pushFn()">Next</button>
   </p></div>
 
 
