--- a/DTF/src/pages/home/home.html
+++ b/DTF/src/pages/home/home.html
@@ -11,9 +11,7 @@
 <ion-content padding class="back">
 
 
-<ion-icon [name]="myIcon"></ion-icon>
   <h3 style="text-align: center">Single Trip</h3>
-<div  >
 <ion-card>
   <ion-card-header>
     <ion-label>Booking Date</ion-label></ion-card-header>
@@ -24,13 +22,13 @@
   </ion-row>
 
 <ion-row> 
-<button ion-button color="dark" clear class="col text-center" col-4  style="font-size:150%;">{{dates}}</button>
-<button  ion-button color="dark" clear class="col text-center" col-4  style="font-size:150%;">{{dates+1}}</button>
-<button  ion-button color="dark" clear class="col text-center" col-4 style="font-size:150%;">{{dates+2}}</button>
+  <button ion-button color="dark" clear class="col date-select-buttons" col-4  style="font-size:150%;">{{dates}}</button>
+  <button  ion-button color="dark" clear class="col date-select-buttons" col-4  style="font-size:150%;">{{dates+1}}</button>
+  <button  ion-button color="dark" clear class="col date-select-buttons" col-4 style="font-size:150%;">{{dates+2}}</button>
 </ion-row>
 </ion-grid>
 </ion-card-content>
-</ion-card></div>
+</ion-card>
 
   
   <ion-list no-lines>
