--- a/DTF/src/pages/home/home.html
+++ b/DTF/src/pages/home/home.html
@@ -9,14 +9,15 @@
 
 
 <ion-content padding class="back">
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
 
 <ion-icon [name]="myIcon"></ion-icon>
   <h3 style="text-align: center">Single Trip</h3>
 <div  >
 <ion-card>
-  <ion-card-header>
-    <ion-label>Booking Date</ion-label></ion-card-header>
+  <!--<ion-card-header>
+    <ion-label></ion-label></ion-card-header>-->
 <ion-card-content>
 <ion-grid text-center>  
   <ion-row>
@@ -32,7 +33,7 @@
 </ion-card-content>
 </ion-card></div>
 
-  
+ 
   <ion-list no-lines>
   <ion-item style = "background-color:transparent">
     <ion-label style="color: #000000">Location</ion-label>
@@ -89,33 +90,13 @@
     <button ion-button color="primary" class="app_buttons" (click)="pushFn()">Next</button>
   </p></div>
 
-
+<div id="utilities" align="center">
+    <button ion-button round icon-left id="call-button" (click)="callNumber()">
+    <ion-icon name="call"></ion-icon>   Call the <br> bus administrator
+    </button>
+</div>
 <!--
-  <button  ion-button (click)="testFn()">Test</button>
-
-<ion-icon class="icon menu-icon ion-home" name="call"></ion-icon>-->
-
-<!--&nbsp;&nbsp;&nbsp;&nbsp;
- <p>
- 
-&nbsp;
-  Call the coordinator
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-<p>
-<ion-icon name="star-outline"></ion-icon>
-<ion-icon name="star-outline"></ion-icon>
-<!--<ion-icon name="star"></ion-icon>
-<ion-icon name="star"></ion-icon>-->
- <!--Single Trips Left
-</p>-->
-<!--<h3 >Posts</h3>  <div *ngFor = "let post of posts">
-  <h3>{{post.id}} </h3>
-   <p>{{post.title}}</p>
-   </div>-->
-  
-  
-   <!--<h3>Posts</h3>  
+!--<h3>Posts</h3>  
     <ion-label style="color: #000000">Boarding Point</ion-label>
    <ion-list>
   <ion-item style = "background-color:transparent">
@@ -129,5 +110,39 @@
   </ion-item>
 </ion-list>
     -->
+
+<!--<script>
+var app = angular.module('selectboxApp', []);
+app.controller('selectboxCtrl', function ($scope) {
+$scope.arrlist = [{
+"userid": 1,
+"name": "Mahape"
+}, {
+"userid": 2,
+"name": "Pune"
+}, {
+"userid": 3,
+"name": "Seepz"
+}];
+$scope.checkselection = function () {
+if ($scope.userSelect != "" && $scope.userSelect != undefined)
+$scope.msg = 'Selected Value: '+$scope.userSelect;
+else
+$scope.msg = 'Please Select Dropdown Value';
+}
+});
+</script>
+
+<body  ng-app="selectboxApp" ng-controller="selectboxCtrl">
+<div>
+<h3>AngularJS Select Box / Dropdown List Validation Example</h3>
+<select name="users" ng-model="userSelect">
+<option value="">--Select User--</option>
+<option ng-repeat="option in arrlist" value="{{option.userid}}">{{option.name}}</option>
+</select>
+</div><br /><br />
+<input type="button" value="Submit" ng-click="checkselection()" /><br /><br />
+<span style="color:red">{{msg}}</span><br />
+</body>-->
 
 </ion-content>
