Date system added

--- a/DTF/src/pages/nextpage/nextpage.html
+++ b/DTF/src/pages/nextpage/nextpage.html
@@ -17,6 +17,9 @@
 
 <ion-content class="complete-page" padding>
   <div id="form-display">
+    <h5>Date</h5>
+    <ion-label>{{full_date}}</ion-label>
+    <br>
     <h5>Bus slot</h5>
     <ion-label>{{bus_slot}}</ion-label>
     <br>
