--- a/DTF/src/pages/home/home.html
+++ b/DTF/src/pages/home/home.html
@@ -23,9 +23,9 @@
   </ion-row>
 
 <ion-row> 
-  <button ion-button color="dark" clear class="col date-select-buttons" col-4  style="font-size:150%;">{{dates}}</button>
-  <button  ion-button color="dark" clear class="col date-select-buttons" col-4  style="font-size:150%;">{{dates+1}}</button>
-  <button  ion-button color="dark" clear class="col date-select-buttons" col-4 style="font-size:150%;">{{dates+2}}</button>
+  <button ion-button color="dark" clear id="date1" class="col date-select-buttons" col-4 (click)="dateSelect(1)">{{dates}}</button>
+  <button  ion-button color="dark" clear id="date2" class="col date-select-buttons" col-4 (click)="dateSelect(2)">{{dates+1}}</button>
+  <button  ion-button color="dark" clear id="date3" class="col date-select-buttons" col-4 (click)="dateSelect(3)">{{dates+2}}</button>
 </ion-row>
 </ion-grid>
 </ion-card-content>
