Fixed date system for monthly registration

--- a/DTF/src/pages/nextpage/nextpage.html
+++ b/DTF/src/pages/nextpage/nextpage.html
@@ -17,7 +17,7 @@
 
 <ion-content class="complete-page" padding>
   <div id="form-display">
-    <h5>Date</h5>
+    <h5>{{period_label}}</h5>
     <ion-label>{{full_date}}</ion-label>
     <br>
     <h5>Bus slot</h5>
