--- a/DTF/src/pages/nextpage/nextpage.html
+++ b/DTF/src/pages/nextpage/nextpage.html
@@ -23,9 +23,11 @@
     <h5>Bus slot</h5>
     <ion-label>{{bus_slot}}</ion-label>
     <br>
+    <div *ngIf="STAR_FLAG">
     <h5>Bus stop</h5>
     <ion-label>{{bus_stop}}</ion-label>
     <br>
+    </div>
     <h5>Charges</h5>
     <ion-label>₹{{charges}}.00</ion-label>
     <br>
