--- a/DTF/src/pages/home/home.html
+++ b/DTF/src/pages/home/home.html
@@ -25,6 +25,11 @@
   <button  ion-button color="dark" clear id="date3" class="col date-select-buttons" col-4 (click)="dateSelect(3)">{{dates+2}}</button>
 </ion-row>
 </ion-grid>
+<ion-row>
+<ion-col col-4 style="font-size:85%;">{{day}}</ion-col>
+<ion-col col-4 style="font-size:85%;">{{day+1}}</ion-col>
+<ion-col col-4 style="font-size:85%;">{{day+2}}</ion-col>
+  </ion-row>
 </ion-card-content>
 </ion-card>
 
@@ -78,7 +83,7 @@
 <ion-list no-lines>
   <ion-item style = "background-color:transparent">
     <ion-label style="color: #000000">Bus Stop</ion-label>
-    <ion-select  interface="popover" id="bstop_select" [(ngModel)]="data.bstop"  disabled="{{BSTOP_FLAG}}">
+    <ion-select  interface="popover" id="bstop_select" [(ngModel)]="data.busstop"  disabled="{{BSTOP_FLAG}}">
       <ion-option *ngFor="let bstop of bstops" value="{{bstop}}">{{bstop}}</ion-option>
     </ion-select>
   </ion-item>
