Better calling functionality + Button for date

--- a/DTF/src/pages/list/list.html
+++ b/DTF/src/pages/list/list.html
@@ -15,7 +15,8 @@
  <h3 style="text-align: center">Monthly Trip</h3>
 <!--<ion-icon name="bus"></ion-icon>&nbsp;-->
 
-  
+<button no-lines id="date-button" (click)="selectDate()">Date<ion-icon name="md-arrow-dropdown" id="arrow-icon"></ion-icon></button>
+
   <ion-list no-lines>
   <ion-item style = "background-color:transparent">
     <ion-label style="color: #000000">Location</ion-label>
