calendar input done. Add css to the calendar

--- a/DTF/src/pages/list/list.html
+++ b/DTF/src/pages/list/list.html
@@ -15,7 +15,8 @@
  <h3 style="text-align: center">Monthly Trip</h3>
 <!--<ion-icon name="bus"></ion-icon>&nbsp;-->
 
-<button no-lines id="date-button" (click)="selectDate()">Date<ion-icon name="md-arrow-dropdown" id="arrow-icon"></ion-icon></button>
+<input  [ngModel]="startDate " (ngModelChange)="startDate = $event" type="date" name="startDate"/>
+
 
   <ion-list no-lines>
   <ion-item style = "background-color:transparent">
@@ -68,6 +69,13 @@
   </p>
   </div>
 
+<!--<input  [ngModel]="startDate | date:'yyyy-MM-dd'" (ngModelChange)="startDate = $event" type="date" name="startDate"/>-->
 
+
+<!--<ion-col col-12 style="font-size:200%;">{{month}}</ion-col>
+<calendar  [currentDate]="calendar.currentDate"
+              step="15"  (click)="dateSelect()">
+              
+</calendar>-->
 
 </ion-content>
